Correct spacing issues

--- a/style.css
+++ b/style.css
@@ -462,6 +462,9 @@ figcaption big {
 .page-id-90 main section:first-of-type .column.one {
 	padding-top: 260px;
 	}
+.page-id-90 main dl {
+	margin-left: -2em;
+	}
 body[class*="faq"] main dl h4,
 .page-id-90 main dl h4 {
 	min-height: 3em;
